<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.arpcentral.pizzadoh.WelcomeActivity"
    tools:showIn="@layout/activity_welcome">

    <RelativeLayout
        android:id="@+id/flour_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/flour_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flour_title"
            android:textAlignment="center"
            android:textSize="50dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flour_caption"
            android:textAlignment="center"
            android:layout_below="@+id/flour_title"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ratios_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flour_card">
        <TextView
            android:id="@+id/ratios_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratios_title"
            android:textAlignment="center"
            android:textSize="50dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratios_caption"
            android:textAlignment="center"
            android:layout_below="@+id/ratios_title"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/technique_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratios_card">
        <TextView
            android:id="@+id/technique_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/technique_title"
            android:textAlignment="center"
            android:textSize="50dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technique_caption"
            android:textAlignment="center"
            android:layout_below="@+id/technique_title"
            />
    </RelativeLayout>

</RelativeLayout>
