<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SelectOptionsActivity"
    tools:showIn="@layout/activity_pizza_options">

    <RelativeLayout
        android:id="@+id/select_type_spinner_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/what_type_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_question"
            android:textSize="32dp"/>

        <Spinner
            android:id="@+id/pizza_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/what_type_question"
            android:spinnerMode="dropdown"
            android:textColor = "@color/colorPrimary"
            android:textSize="32dp">
        </Spinner>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/select_amount_spinner_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_type_spinner_container"
        android:visibility="invisible">
        <TextView
            android:id="@+id/how_many_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_question"
            android:textSize="32dp"/>
        <Spinner
            android:id="@+id/pizza_amount_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/how_many_question"
            android:spinnerMode="dropdown"
            android:textColor = "@color/colorPrimary">
        </Spinner>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/select_if_using_starter_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_amount_spinner_container"
        android:visibility="invisible">

        <LinearLayout
            android:layout_marginTop="20pt"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textOff="Don't Use"
                android:textOn="Use"
                android:layout_marginRight="20dp"
                android:id="@+id/use_a_starter"
                />

            <!--<ToggleButton-->
                <!--android:textOff="Don't Use"-->
                <!--android:textOn="Use"-->
                <!--android:id="@+id/use_a_starter"-->
                <!--android:layout_below="@+id/using_starter_question"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/yes_for_starter"-->
                <!--android:backgroundTint="@color/colorPrimaryDark"-->
                <!--android:textColor="@color/white"-->
                <!--android:checked="true"-->
                <!--android:minWidth="120dp"/>-->

            <TextView
                android:id="@+id/using_starter_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starter_question"
                android:textSize="@dimen/small_text"/>
        </LinearLayout>


    </RelativeLayout>



</RelativeLayout>

